saves/test/demo_full_20240802_193545/fadd/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fadd_tb.v fadd.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fadd_tb.v:71: $finish called at 8000 (1ps)

iverilog cmd 2 error:

